# ensemble-ploidy-classifier

./: .gitignore  CONTRIBUTING.md  FIXED_INDICES_DOCUMENTATION.md  LICENSE  MODEL_LOADING_NOTES.md  PACKAGE_SUMMARY.md  README.md  install.sh  pyproject.toml  setup_final_package.py  simple_rank_probes.py  test_imports.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SPECIES_ADAPTATION.md
examples/: basic_usage.py  quick_start.py  simple_usage.py  working_ensemble_example.py  working_example.py
organized_project/embeddings/ReducedEmbeddings/probe_101/: reduced_embeddings_test.npz  reduced_embeddings_train.npz  reduced_embeddings_true_val.npz  reduced_embeddings_val.npz
organized_project/embeddings/ReducedEmbeddings/probe_105/: reduced_embeddings_test.npz  reduced_embeddings_train.npz  reduced_embeddings_true_val.npz  reduced_embeddings_val.npz
organized_project/embeddings/ReducedEmbeddings/probe_106/: reduced_embeddings_test.npz  reduced_embeddings_train.npz  reduced_embeddings_true_val.npz  reduced_embeddings_val.npz
organized_project/embeddings/ReducedEmbeddings/probe_110/: reduced_embeddings_test.npz  reduced_embeddings_train.npz  reduced_embeddings_true_val.npz  reduced_embeddings_val.npz
organized_project/embeddings/ReducedEmbeddings/probe_111/: reduced_embeddings_test.npz  reduced_embeddings_train.npz  reduced_embeddings_true_val.npz  reduced_embeddings_val.npz
organized_project/embeddings/ReducedEmbeddings/probe_114/: reduced_embeddings_test.npz  reduced_embeddings_train.npz  reduced_embeddings_true_val.npz  reduced_embeddings_val.npz
organized_project/embeddings/ReducedEmbeddings/probe_116/: reduced_embeddings_test.npz  reduced_embeddings_train.npz  reduced_embeddings_true_val.npz  reduced_embeddings_val.npz
scripts/: setup_environment.py  verify_installation.py
src/ensemble_ploidy_classifier/: __init__.py  ensemble_classifier.py  working_ensemble.py
src/ensemble_ploidy_classifier/config/: __init__.py  model_config.py  training_config.py
src/ensemble_ploidy_classifier/models/: mlp_classifier.py
src/ensemble_ploidy_classifier/training/: __init__.py  trainer.py
src/ensemble_ploidy_classifier/utils/: __init__.py  logging.py  metrics.py  model_loader.py  visualization.py
tests/: test_models.py
(+580 files in other folders)
